<resources>
    <string name="app_name" translatable="false">ListPlanner</string>
    <string name="to_do_list_header" translatable="false">To Do List</string>
    <string name="task_tag" translatable="false">1</string>
    <string name="task_date_info" translatable="false">13/12/14</string>
    <string name="todo_title">TODO</string>
    <string name="description">Description:</string>
    <string name="priority">Priority:</string>
    <string name="title">Title:</string>
    <string name="update_task">UPDATE TASK</string>
    <string name="update">Update</string>
    <string name="Add_Task_title">ADD NEW TASK</string>
    <string name="missed_tasks">Missed Tasks</string>
    <string name="home">Home</string>
    <string name="logo">logo</string>
    <string name="loading">Loading ....</string>
    <string name="due_date">Due Date:</string>
    <string name="due_date_Title">Due Date</string>
    <string name="create_task">Create Task</string>
    <string name="enter_a_date_here">Enter a date here...</string>
    <string name="enter_your_title_here">Enter your title here...</string>
    <string name="enter_your_decsription_here">Enter your decsription here...</string>
    <string name="close">Close</string>
    <string name="enter_a_title_here">Enter a title here...</string>
    <string name="delete">Delete</string>
    <string-array name="priority_list">
        <item>Please Select a Priority</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>