<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateSingleTask" >


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCloseUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:clickable="true"
        android:contentDescription="@string/close"
        app:backgroundTint="#EC5E6C"
        app:backgroundTintMode="src_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@drawable/close_icon"
        tools:ignore="VectorDrawableCompat"
        android:focusable="true" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spEditSinglePriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/priority_list"
        android:gravity="start" />

    <EditText
        android:id="@+id/txtEditDueDateReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblPriority"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginEnd="179dp"
        android:layout_marginRight="179dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/enter_a_date_here"
        android:inputType="date" />

    <TextView
        android:id="@+id/lblDueDateEdit"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEditDueDateReal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginBottom="13dp"
        android:gravity="center|start"
        android:text="@string/due_date"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="148dp"
        android:layout_height="49dp"
        android:layout_above="@+id/txtEditSingleDesc"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="239dp"
        android:layout_marginRight="239dp"
        android:layout_marginBottom="11dp"
        android:gravity="center|start"
        android:text="@string/description"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEditSingleTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="14dp"
        android:gravity="center|start"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/txtEditSingleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblDueDateEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginEnd="179dp"
        android:layout_marginRight="179dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_a_title_here"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtEditSingleDesc"
        android:layout_width="317dp"
        android:layout_height="122dp"
        android:layout_above="@+id/btnUpdateTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="21dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_your_decsription_here"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <TextView
        android:id="@+id/lblPriority"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spEditSinglePriority"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="19dp"
        android:gravity="center|start"
        android:text="@string/priority"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lblAddNewTaskTitle"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_toStartOf="@+id/btnCloseUpdate"
        android:layout_toLeftOf="@+id/btnCloseUpdate"
        android:gravity="center"
        android:text="@string/update_task"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnUpdateTask"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginBottom="48dp"
        android:background="@color/priority5"
        android:text="@string/update"
        app:backgroundTint="@color/priority1" />

</RelativeLayout>