<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCloseAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#EC5E6C"
        app:backgroundTintMode="src_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@drawable/close_icon"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/txtEditDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblPriority"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:layout_marginBottom="19dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:hint="@string/enter_a_date_here"
        android:inputType="date" />

    <EditText
        android:id="@+id/txtEditSingleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblDueDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_title_here"
        android:inputType="textPersonName" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spEditSinglePriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="31dp"
        android:entries="@array/priority_list"
        android:gravity="start" />

    <EditText
        android:id="@+id/txtEditSingleDesc"
        android:layout_width="317dp"
        android:layout_height="122dp"
        android:layout_above="@+id/btnUpdateTask"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="27dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_your_decsription_here"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <TextView
        android:id="@+id/lblPriority"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spEditSinglePriority"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center|start"
        android:text="@string/priority"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lblDueDate"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_above="@+id/txtEditDueDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="19dp"
        android:text="@string/due_date_Title"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEditSingleDesc"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="220dp"
        android:layout_marginRight="220dp"
        android:layout_marginBottom="7dp"
        android:gravity="bottom|center|start"
        android:text="@string/description"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lblTitleAdd"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_above="@+id/txtEditSingleTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginBottom="19dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnUpdateTask"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginLeft="97dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:layout_marginBottom="33dp"
        android:background="@color/priority5"
        android:text="@string/create_task"
        app:backgroundTint="@color/priority5" />

    <TextView
        android:id="@+id/lblAddNewTaskTitle"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_toStartOf="@+id/btnCloseAdd"
        android:layout_toLeftOf="@+id/btnCloseAdd"
        android:gravity="center"
        android:text="@string/Add_Task_title"
        android:textColor="#000000"
        android:textSize="24sp" />


</RelativeLayout>